@@ -1,3 +1,8 @@
+2008-05-23  Tambet Ingo  <tambet@gmail.com>
+
+	* src/connection-editor/page-ip4.c: Add a "DHCP with manual DNS settings"
+	IP4 configuration method.
+
 2008-05-21  Dan Williams  <dcbw@redhat.com>
 
 	* src/wireless-security/wireless-security.c
